Fix z-index for hamburger icon

--- a/scss/mas/_sidebarNav.scss
+++ b/scss/mas/_sidebarNav.scss
@@ -170,7 +170,7 @@ li.facet-item input {
   top: 20px;
   margin-left: 15px;
   width: 32px;
-  z-index: 9999;
+  z-index: 1001;
 }
 
 .view__header .hamburger {
